--- a/message_board/templates/pages/message_board.html
+++ b/message_board/templates/pages/message_board.html
@@ -17,7 +17,7 @@
 
         <h2>Add message</h2>
         <form action="./add/" method="POST">
-            {% csrf_token %}
+            <!-- {% csrf_token %} -->
             <input type="text" name="content"/>
             <input type="submit"/>
         </form>
